assets/sass/_partials/_skyline.scss
/* Animated Skyline */
.skyline {
    width: calc(100% + 1px);
    position: absolute;
    left: -1;
    right: 1;
    bottom: -1px;
    height: 650px;
    overflow-x: hidden;
    pointer-events: none;
}
.skyline-component {
    width: 100%;
    height: 100%;
    background-repeat: no-repeat;
    background-size: contain;
    background-position: bottom;
    position: absolute;
}
#skyline_black {
    background-image: url('skyline/black.svg');
}
#skyline_gold {
    background-image: url('skyline/gold.svg');
}
#skyline_goldengate {
    background-image: url('skyline/goldengate.svg');
}
#skyline_twinpeaks {
    background-image: url('skyline/twinpeaks.svg');
}
.skyline-component.animated {
    transition: transform 2s ease;
    -webkit-transform: translateX(0%);
    transform: translateX(0%);
    will-change: transform;
}
.skyline-component.off-right {
    -webkit-transform: translateX(103%);
    transform: translateX(103%);
}
.skyline-component.off-left {
    -webkit-transform: translateX(-103%);
    transform: translateX(-103%);
}

